[rlhf] multi-gpu pipeline done

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -488,8 +488,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import wandb\n",
-        "run = wandb.init(reinit=False)"
+        "wandb_tracker = ppo_trainer.accelerator.get_tracker(\"wandb\", unwrap=True)"
       ]
     },
     {
@@ -515,7 +514,6 @@
         "generation_kwargs[\"pad_token_id\"] = tokenizer.eos_token_id\n",
         "best_reward = float('-inf')\n",
         "global_epoches = 10\n",
-        "\n",
         "\n",
         "for global_epo in tqdm(range(global_epoches)):\n",
         "    for epoch, batch in tqdm(enumerate(ppo_trainer.dataloader)):\n",
@@ -546,19 +544,22 @@
         "\n",
         "        if (epoch + 1) % save_config['save_interval'] == 0:\n",
         "            ppo_trainer.accelerator.wait_for_everyone()\n",
-        "            unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
-        "            save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "            if ppo_trainer.accelerator.is_main_process:\n",
+        "                unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "                save_checkpoint(unwrapped_model, wandb_tracker, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint', config.tracker_kwargs['name'])\n",
         "\n",
         "        if mean_reward > best_reward:\n",
         "            ppo_trainer.accelerator.wait_for_everyone()\n",
-        "            unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
-        "            save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
+        "            if ppo_trainer.accelerator.is_main_process:\n",
+        "                unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "                save_checkpoint(unwrapped_model, wandb_tracker, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo', config.tracker_kwargs['name'])\n",
         "\n",
         "            best_reward = mean_reward\n",
         "        \n",
         "    ppo_trainer.accelerator.wait_for_everyone()\n",
-        "    unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
-        "    save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
+        "    if ppo_trainer.accelerator.is_main_process:\n",
+        "        unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "        save_checkpoint(unwrapped_model, wandb_tracker, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint', config.tracker_kwargs['name'])"
       ]
     },
     {
